--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,80 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  :root {
+    --text-color: #1a1c20;
+    --link-color: #4a76ee;
+    --background-color: #eeeff1;
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  body {
+    font-family: 'Poppins', sans-serif;
+    background-color: var(--background-color);
+  }
+
+  a {
+    color: var(--link-color);
+    text-decoration: none;
+  }
+
+/* NAVBAR */
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 0 50px;
+  height: 80px;
 }
 
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
+nav .left a {
+  color: var(--text-color);
+  font-size: 22px;
+  font-weight: 600;
 }
 
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+nav .right a {
+  color: var(--text-color);
+  margin: 0 10px;
 }
 
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
+nav .right a:last-child {
+  color: var(--background-color);
+  background-color: var(--text-color);
+  padding: 5px 15px;
+  border-radius: 5px;
 }
 
-nav ul li a {
-  text-decoration: none;
-  color: #fff;
+nav .right a span {
+  margin-left: 5px;
 }
 
-main {
-  padding: 20px;
-}
+@media (max-width: 600px) {
+  /* NAVBAR */
+  nav {
+    padding: 0 20px;
+  }
 
-section {
-  margin-bottom: 40px;
-}
+  nav .right a {
+    font-size: 22px;
+  }
 
-h2 {
-  color: #333;
-}
+  nav .right a:last-child {
+    color: var(--text-color);
+    background-color: transparent;
+    padding: 0;
+    }
+  
 
-p {
-  color: #666;
-}
-
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
+  nav .right a span {
+    display: none;
+  }
 }
