--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,24 @@ nav .right a span {
   border-radius: 50%;
 }
 
+@media (max-width: 850px) {
+   /* SECTION 1: Hero */
+   .hero-section .text h2 {
+    font-size: 35px;
+   } 
+}
+
+@media (max-width: 740px) {
+   /* SECTION 1: Hero */
+   .hero-section {
+    flex-direction: column-reverse;
+   } 
+
+   .hero-section .headshot img {
+    width: 300px;
+   }    
+}
+
 @media (max-width: 690px) {
   /* NAVBAR */
   nav {
@@ -125,5 +143,14 @@ nav .right a span {
 
   nav .right a span {
     display: none;
+  }
+
+  /* SECTION 1: Hero */
+  .hero-section {
+    padding: 0 20px;
+  }
+
+  .hero-section .text h2 {
+    font-size: 30px;
   }
 }
