--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,58 @@ nav .right a span {
   border-radius: 50%;
 }
 
+/* SECTION 2: WORK PRODUCT */
+
+.work-product-section {
+  padding: 0 50px;
+  margin-bottom: 100px;
+}
+
+.work-product-section h2 {
+  text-align: center;
+  font-size: 35px;
+}
+
+.work-product-section .text {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.work-product-section .cells {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.work-product-section .cells .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  width: 200px;
+  padding: 10px 20px;
+  margin: 10px;
+  border: 1.5px solid #d3d3d3;
+  border-radius: 5px;
+}
+
+.work-product-section .cells .cell i {
+  object-fit: contain;
+}
+
+.work-product-section .cells .cell span {
+  font-size: 18px;
+}
+
+
+/* SECTION 4: Contact */
+.contact-section {
+  padding: 0 50px;
+  margin-bottom: 100px;
+}
+
+
 @media (max-width: 850px) {
    /* SECTION 1: Hero */
    .hero-section .text h2 {
@@ -152,5 +204,14 @@ nav .right a span {
 
   .hero-section .text h2 {
     font-size: 30px;
+  }
+
+  /* SECTION 2: WORK PRODUCT */
+  .work-product-section{
+    padding: 0 20px;
+  }
+
+  .work-product-section .cells .cell span {
+    font-size: 16px;
   }
 }
